--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="ui.MainFragment">
 
-    <!--<item android:id="@+id/id_delete"-->
-        <!--android:enabled="true"-->
-        <!--android:icon="@drawable/ic_delete_24px"-->
-        <!--android:title="@string/lbl_delete" />-->
-
-    <item android:id="@+id/id_refresh"
+    <item android:id="@+id/id_mnu_bnv_refresh"
         android:enabled="true"
         android:icon="@drawable/ic_refresh_24px"
         android:title="@string/lbl_refresh"/>
 
-    <item android:id="@+id/id_settings"
+    <item android:id="@+id/id_mnu_bnv_settings"
         android:enabled="true"
         android:icon="@drawable/ic_settings_24px"
         android:title="@string/lbl_settings"/>
 
-    <item android:id="@+id/id_add"
+    <item android:id="@+id/id_mnu_bnv_add"
         android:enabled="true"
         android:icon="@drawable/ic_add_circle_24px"
         android:title="@string/lbl_add"/>
