--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -12,6 +12,7 @@
     <!-- Show a refresh interval indicator. -->
     <item android:id="@+id/id_mnu_refresh_interval"
         android:title="@string/lbl_refresh"
+        android:visible="false"
         app:actionLayout="@layout/refresh"
         app:showAsAction="ifRoom" />
 
