--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -88,7 +88,7 @@
         android:id="@+id/id_btn_time"
         android:layout_width="112dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="112dp"
         android:drawableStart="@drawable/ic_clock_outline"
         android:padding="8dp"
@@ -102,30 +102,20 @@
         android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="64dp"
         android:text="@string/lbl_save"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
-    <TextView
-        android:id="@+id/id_tv_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lbl_time"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        app:layout_constraintEnd_toEndOf="@+id/id_btn_time"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="@+id/id_btn_time"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_time" />
-
-    <CheckBox
-        android:id="@+id/id_cb_multi_sel"
+    <Button
+        android:id="@+id/id_btn_multi_sel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/lbl_multi_select"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
@@ -133,34 +123,34 @@
         android:id="@+id/id_tv_multi_sel0"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_cb_multi_sel" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/id_btn_multi_sel"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/id_tv_multi_sel1"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel0"
-        app:layout_constraintTop_toBottomOf="@+id/id_cb_multi_sel" />
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/id_tv_multi_sel2"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel1"
-        app:layout_constraintTop_toBottomOf="@+id/id_cb_multi_sel" />
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/id_tv_multi_sel3"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel2"
-        app:layout_constraintTop_toBottomOf="@+id/id_cb_multi_sel" />
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -169,15 +159,14 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="224dp" />
 
-    <Button
-        android:id="@+id/id_btn_multi_sel_edit"
-        android:layout_width="48dp"
+    <TextView
+        android:id="@+id/id_tv_selects_label"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/lbl_edit"
-        android:textAppearance="@android:style/TextAppearance.Material.Small"
-        app:layout_constraintStart_toEndOf="@+id/id_cb_multi_sel"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        android:text="@string/lbl_selections"
+        app:layout_constraintBottom_toBottomOf="@+id/id_btn_multi_sel"
+        app:layout_constraintEnd_toEndOf="@+id/id_tv_multi_sel3"
+        app:layout_constraintStart_toStartOf="@+id/id_tv_multi_sel0"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
