--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -9,6 +9,12 @@
         android:icon="@drawable/ic_delete_24px"
         app:showAsAction="ifRoom"/>
 
+    <item android:id="@+id/id_mnu_notifications"
+        android:title="@string/lbl_notifications"
+        android:visible="false"
+        app:actionLayout="@layout/notifications"
+        app:showAsAction="ifRoom"/>
+
     <!-- Show a refresh interval indicator. -->
     <item android:id="@+id/id_mnu_refresh_interval"
         android:title="@string/lbl_refresh"
