--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -88,12 +88,12 @@
         android:id="@+id/id_btn_time"
         android:layout_width="112dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="32dp"
         android:drawableStart="@drawable/ic_clock_outline"
         android:padding="8dp"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/id_btn_additional"
+        app:layout_constraintStart_toEndOf="@+id/id_btn_multi_sel"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
         <!--TODO android:contentDescription="" />-->
 
@@ -101,11 +101,11 @@
         android:id="@+id/id_btn_save"
         android:layout_width="112dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginTop="96dp"
         android:text="@string/lbl_save"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/id_btn_additional"
+        app:layout_constraintStart_toStartOf="@+id/id_btn_time"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <Button
@@ -113,7 +113,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="@string/lbl_multi_select"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,34 +123,31 @@
         android:id="@+id/id_tv_multi_sel0"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/id_btn_multi_sel"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_tv_selects_label" />
 
     <TextView
         android:id="@+id/id_tv_multi_sel1"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel0"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintBottom_toBottomOf="@+id/id_tv_multi_sel0"
+        app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel0" />
 
     <TextView
         android:id="@+id/id_tv_multi_sel2"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel1"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintBottom_toBottomOf="@+id/id_tv_multi_sel1"
+        app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel1" />
 
     <TextView
         android:id="@+id/id_tv_multi_sel3"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel2"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintBottom_toBottomOf="@+id/id_tv_multi_sel2"
+        app:layout_constraintStart_toEndOf="@+id/id_tv_multi_sel2" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -161,12 +158,94 @@
 
     <TextView
         android:id="@+id/id_tv_selects_label"
-        android:layout_width="128dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="96dp"
         android:text="@string/lbl_selections"
-        app:layout_constraintBottom_toBottomOf="@+id/id_btn_multi_sel"
-        app:layout_constraintEnd_toEndOf="@+id/id_tv_multi_sel3"
-        app:layout_constraintStart_toStartOf="@+id/id_tv_multi_sel0"
-        android:textAppearance="@android:style/TextAppearance.Material.Small"/>
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <Button
+        android:id="@+id/id_btn_additional"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/lbl_additional"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="384dp" />
+
+    <TextView
+        android:id="@+id/id_tv_trainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/lbl_trainer"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+    <TextView
+        android:id="@+id/id_tv_trainer_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/id_tv_trainer"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+    <TextView
+        android:id="@+id/id_tv_jockey"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/lbl_jockey"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/id_tv_trainer_name"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+    <TextView
+        android:id="@+id/id_tv_jockey_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/id_tv_jockey"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+    <TextView
+        android:id="@+id/id_tv_horse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:text="@string/lbl_horse"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+    <TextView
+        android:id="@+id/id_tv_horse_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/id_tv_horse"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
